--- a/app/src/main/res/layout/fragment_order_history.xml
+++ b/app/src/main/res/layout/fragment_order_history.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment.customer_fragment.LocateVendorFragment">
+    tools:context=".fragment.customer_fragment.OrderHistoryFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
