--- a/app/src/main/res/layout/fragment_mart_map.xml
+++ b/app/src/main/res/layout/fragment_mart_map.xml
@@ -1,10 +1,10 @@
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingTop="22sp"
+    android:orientation="vertical"
     android:background="@android:color/white">
 
     <RelativeLayout
@@ -39,5 +39,11 @@
 
     </RelativeLayout>
 
+    <fragment
+        android:id="@+id/mapFragment"
+        class="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
-</RelativeLayout>
+
+</LinearLayout>
