--- a/app/src/main/res/layout/fragment_customer_home.xml
+++ b/app/src/main/res/layout/fragment_customer_home.xml
@@ -35,156 +35,48 @@
                 android:typeface="monospace"
                 android:fontFamily="@font/nunito_sans_reguler" />
 
-
-
         </RelativeLayout>
 
     </RelativeLayout>
 
-    <androidx.core.widget.NestedScrollView
-        android:layout_width="match_parent"
+    <LinearLayout
+        android:id="@+id/mart_title"
         android:layout_below="@id/relSearch"
-        android:background="@android:color/white"
-        android:layout_height="match_parent">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5sp"
+        android:layout_marginBottom="5dp"
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
 
-        <RelativeLayout
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
+            android:layout_weight="1"
+            android:textAlignment="center"
+            android:text="Registered Marts"
+            android:textColor="@color/titleColor"
+            android:textSize="22sp" />
+
+
+    </LinearLayout>
+
+
+
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/mart_recycler_view"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/mart_title"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginEnd="0dp"
+            android:layout_marginRight="0dp"
+            android:layout_marginBottom="2dp" />
 
-            <RelativeLayout
-                android:id="@+id/search_bar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@color/colorPrimary">
 
-                <androidx.cardview.widget.CardView
-                    android:layout_width="match_parent"
-                    android:layout_height="40dp"
-                    android:layout_marginBottom="10dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginRight="20dp"
-                    android:clipToPadding="false"
-                    app:cardBackgroundColor="@android:color/white"
-                    app:cardCornerRadius="5dp"
-                    app:cardElevation="3dp"
-                    app:cardUseCompatPadding="false"
-                    app:layout_collapseMode="parallax">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="horizontal">
-
-                        <RelativeLayout
-                            android:layout_width="50dp"
-                            android:layout_height="match_parent">
-
-                            <ImageView
-                                android:id="@+id/btn_search"
-                                android:layout_width="25dp"
-                                android:layout_height="25dp"
-                                android:layout_centerInParent="true"
-                                android:src="@drawable/ic_search"/>
-
-                        </RelativeLayout>
-
-                        <TextView
-                            android:id="@+id/search_text"
-                            android:layout_width="0dp"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1"
-                            android:gravity="center_vertical"
-                            android:text="Search here..."
-                            android:textSize="18sp"
-                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
-                            android:textColor="@color/grey_40"/>
-
-                    </LinearLayout>
-
-                </androidx.cardview.widget.CardView>
-
-            </RelativeLayout>
-
-            <LinearLayout
-                android:id="@+id/product_title"
-                android:layout_marginTop="20sp"
-                android:layout_marginBottom="5dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_vertical"
-                android:layout_below="@id/search_bar"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="Recent Products"
-                    android:textSize="20sp"
-                    android:textColor="@color/titleColor"
-                    android:layout_marginLeft="14dp" />
-
-                <TextView
-                    android:id="@+id/product_list"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:text="View all"
-                    android:textSize="14sp"
-                    android:layout_marginRight="22dp"
-                    android:textColor="@color/colorPrimary"
-                    android:fontFamily="@font/nunito_sans_reguler" />
-
-            </LinearLayout>
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/product_recycler_view"
-                android:layout_below="@id/product_title"
-                android:layout_height="250dp"
-                android:layout_width="match_parent"
-                android:orientation="horizontal"/>
-
-            <LinearLayout
-                android:id="@+id/mart_title"
-                android:layout_below="@id/product_recycler_view"
-                android:layout_marginTop="20sp"
-                android:layout_marginBottom="5dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_vertical"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="Registered Marts"
-                    android:textSize="22sp"
-                    android:textColor="@color/titleColor"
-                    android:layout_marginLeft="15dp" />
-
-                <TextView
-                    android:id="@+id/mart_list"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:text="View all"
-                    android:textSize="14sp"
-                    android:layout_marginRight="22dp"
-                    android:textColor="@color/colorPrimary"
-                    android:fontFamily="@font/nunito_sans_reguler" />
-
-            </LinearLayout>
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/mart_recycler_view"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/mart_title" />
-
-        </RelativeLayout>
-
-    </androidx.core.widget.NestedScrollView>
 
 </RelativeLayout>
