Mart Product Fragment Done

--- a/app/src/main/res/layout/fragment_mart_product.xml
+++ b/app/src/main/res/layout/fragment_mart_product.xml
@@ -6,36 +6,60 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingTop="22sp"
-    android:background="@android:color/white"
-    tools:context=".fragment.mart_fragment.MartHomeFragment">
+    android:background="@android:color/white">
 
 
     <RelativeLayout
         android:id="@+id/relSearch"
         android:layout_width="match_parent"
-        android:background="@color/colorPrimary"
-        android:layout_height="55dp">
+        android:layout_height="110dp"
+        android:background="@color/colorPrimary">
 
         <RelativeLayout
             android:id="@+id/layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="7dp"
+            android:layout_marginEnd="0dp"
+            android:layout_marginRight="0dp"
             android:elevation="5dp">
 
             <TextView
                 android:id="@+id/browse"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
                 android:layout_marginLeft="22dp"
-                android:layout_centerVertical="true"
+                android:layout_marginTop="8dp"
+                android:fontFamily="@font/nunito_sans_reguler"
                 android:text="@string/app_name"
                 android:textColor="@android:color/white"
                 android:textSize="20sp"
                 android:textStyle="bold"
-                android:typeface="monospace"
-                android:fontFamily="@font/nunito_sans_reguler" />
+                android:typeface="monospace" />
 
+            <androidx.appcompat.widget.SearchView
+                android:id="@+id/searchitems"
+                android:layout_width="321dp"
+                android:layout_height="33dp"
+                android:layout_below="@id/browse"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_marginStart="42dp"
+                android:layout_marginLeft="42dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginEnd="47dp"
+                android:layout_marginRight="47dp"
+                android:animateLayoutChanges="true"
+                android:background="@drawable/searchborder"
+                android:orderInCategory="100"
+                app:actionViewClass="android.support.v7.widget.SearchView"
+                app:showAsAction="always" />
         </RelativeLayout>
 
     </RelativeLayout>
@@ -50,24 +74,22 @@
         android:gravity="center_vertical"
         android:orientation="horizontal">
 
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
-            android:layout_weight="1"
-            android:textAlignment="center"
-            android:text="Product List"
-            android:textColor="@color/titleColor"
-            android:textSize="22sp" />
+        <!--  <TextView
+              android:layout_width="0dp"
+              android:layout_height="wrap_content"
+              android:layout_marginLeft="15dp"
+              android:layout_weight="1"
+              android:textAlignment="center"
+              android:text="All Products"
+              android:textColor="@color/titleColor"
+              android:textSize="22sp" />-->
 
 
     </LinearLayout>
 
 
-
-
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/mart_recycler_view"
+        android:id="@+id/products_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/mart_title"
